[package]
name = "h10"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
repository = "https://github.com/osa1/h10"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "h10"
path = "bin/h10.rs"

[dependencies]
h10_lexer = { path = "../h10_lexer" }
rc_id = { path = "../rc_id" }

console_error_panic_hook = "0.1.7"
indoc = "2.0.4"
lazy_static = "1.4.0"
lexgen_util = { git = "https://github.com/osa1/lexgen.git", rev = "4a4d78e" }
rpds = "0.13"
rustc-hash = "1.1"
smol_str = "0.2.1"
wasm-bindgen = "0.2"
