[package]
name = "h10_lexer"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
repository = "https://github.com/osa1/h10"
license = "MIT"
edition = "2021"

[dependencies]
lexgen = { git = "https://github.com/osa1/lexgen.git", rev = "4a4d78e" }
lexgen_util = { git = "https://github.com/osa1/lexgen.git", rev = "4a4d78e" }
smol_str = "0.2.1"
